BG-0: Make Spark tests pass on java 17